native/desktop-macos/headers/desktop_macos.h

typedef struct DisplayLinkBox DisplayLinkBox;
typedef struct Window Window;
typedef int64_t WindowId;
typedef char *StrPtr;
typedef double LogicalPixels;
typedef struct LogicalPoint {
  LogicalPixels x;
  LogicalPixels y;
} LogicalPoint;
typedef uint32_t ScreenId;
typedef struct LogicalSize {
  LogicalPixels width;
  LogicalPixels height;
} LogicalSize;
typedef struct WindowParams {
  struct LogicalPoint origin;
  struct LogicalSize size;
  StrPtr title;
  bool is_resizable;
  bool is_closable;
  bool is_miniaturizable;
  bool is_full_screen_allowed;
  bool use_custom_titlebar;
  LogicalPixels titlebar_height;
} WindowParams;
void dispatcher_main_exec_async(void (*f)(void));
void display_link_set_running(struct DisplayLinkBox *display_link, bool value);
bool display_link_is_running(struct DisplayLinkBox *display_link);
struct Window *window_create(const struct WindowParams *params);
void window_drop(struct Window *window);
WindowId window_get_window_id(const struct Window *window);
ScreenId window_get_screen_id(const struct Window *window);
double window_scale_factor(const struct Window *window);