kotlin-desktop-toolkit/src/main/java/org/jetbrains/desktop/macos/generated/desktop_macos_h.java


        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("display_link_set_running");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void display_link_set_running(struct DisplayLinkBox *display_link, bool value)
     * }
     */
    public static FunctionDescriptor display_link_set_running$descriptor() {
        return display_link_set_running.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void display_link_set_running(struct DisplayLinkBox *display_link, bool value)
     * }
     */
    public static MethodHandle display_link_set_running$handle() {
        return display_link_set_running.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void display_link_set_running(struct DisplayLinkBox *display_link, bool value)
     * }
     */
    public static MemorySegment display_link_set_running$address() {
        return display_link_set_running.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void display_link_set_running(struct DisplayLinkBox *display_link, bool value)
     * }
     */
    public static void display_link_set_running(MemorySegment display_link, boolean value) {
        var mh$ = display_link_set_running.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("display_link_set_running", display_link, value);
            }
            mh$.invokeExact(display_link, value);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class display_link_is_running {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            desktop_macos_h.C_BOOL,
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("display_link_is_running");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * bool display_link_is_running(struct DisplayLinkBox *display_link)
     * }
     */
    public static FunctionDescriptor display_link_is_running$descriptor() {
        return display_link_is_running.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * bool display_link_is_running(struct DisplayLinkBox *display_link)
     * }
     */
    public static MethodHandle display_link_is_running$handle() {
        return display_link_is_running.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * bool display_link_is_running(struct DisplayLinkBox *display_link)
     * }
     */
    public static MemorySegment display_link_is_running$address() {
        return display_link_is_running.ADDR;
    }

    /**
     * {@snippet lang=c :
     * bool display_link_is_running(struct DisplayLinkBox *display_link)
     * }
     */
    public static boolean display_link_is_running(MemorySegment display_link) {
        var mh$ = display_link_is_running.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("display_link_is_running", display_link);
            }
            return (boolean)mh$.invokeExact(display_link);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            desktop_macos_h.C_POINTER,
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct Window *window_create(const struct WindowParams *params)
     * }
     */
    public static FunctionDescriptor window_create$descriptor() {
        return window_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct Window *window_create(const struct WindowParams *params)
     * }
     */
    public static MethodHandle window_create$handle() {
        return window_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * struct Window *window_create(const struct WindowParams *params)
     * }
     */
    public static MemorySegment window_create$address() {
        return window_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * struct Window *window_create(const struct WindowParams *params)
     * }
     */
    public static MemorySegment window_create(MemorySegment params) {
        var mh$ = window_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_create", params);
            }
            return (MemorySegment)mh$.invokeExact(params);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_drop {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_drop");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void window_drop(struct Window *window)
     * }
     */
    public static FunctionDescriptor window_drop$descriptor() {
        return window_drop.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void window_drop(struct Window *window)
     * }
     */
    public static MethodHandle window_drop$handle() {
        return window_drop.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void window_drop(struct Window *window)
     * }
     */
    public static MemorySegment window_drop$address() {
        return window_drop.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void window_drop(struct Window *window)
     * }
     */
    public static void window_drop(MemorySegment window) {
        var mh$ = window_drop.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_drop", window);
            }
            mh$.invokeExact(window);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_get_window_id {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            desktop_macos_h.C_LONG_LONG,
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_get_window_id");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * WindowId window_get_window_id(const struct Window *window)
     * }
     */
    public static FunctionDescriptor window_get_window_id$descriptor() {
        return window_get_window_id.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * WindowId window_get_window_id(const struct Window *window)
     * }
     */
    public static MethodHandle window_get_window_id$handle() {
        return window_get_window_id.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * WindowId window_get_window_id(const struct Window *window)
     * }
     */
    public static MemorySegment window_get_window_id$address() {
        return window_get_window_id.ADDR;
    }

    /**
     * {@snippet lang=c :
     * WindowId window_get_window_id(const struct Window *window)
     * }
     */
    public static long window_get_window_id(MemorySegment window) {
        var mh$ = window_get_window_id.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_get_window_id", window);
            }
            return (long)mh$.invokeExact(window);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_get_screen_id {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            desktop_macos_h.C_INT,
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_get_screen_id");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ScreenId window_get_screen_id(const struct Window *window)
     * }
     */
    public static FunctionDescriptor window_get_screen_id$descriptor() {
        return window_get_screen_id.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ScreenId window_get_screen_id(const struct Window *window)
     * }
     */
    public static MethodHandle window_get_screen_id$handle() {
        return window_get_screen_id.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ScreenId window_get_screen_id(const struct Window *window)
     * }
     */
    public static MemorySegment window_get_screen_id$address() {
        return window_get_screen_id.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ScreenId window_get_screen_id(const struct Window *window)
     * }
     */
    public static int window_get_screen_id(MemorySegment window) {
        var mh$ = window_get_screen_id.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_get_screen_id", window);
            }
            return (int)mh$.invokeExact(window);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_scale_factor {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            desktop_macos_h.C_DOUBLE,
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_scale_factor");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * double window_scale_factor(const struct Window *window)
     * }
     */
    public static FunctionDescriptor window_scale_factor$descriptor() {
        return window_scale_factor.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * double window_scale_factor(const struct Window *window)
     * }
     */
    public static MethodHandle window_scale_factor$handle() {
        return window_scale_factor.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * double window_scale_factor(const struct Window *window)
     * }
     */
    public static MemorySegment window_scale_factor$address() {
        return window_scale_factor.ADDR;
    }

    /**
     * {@snippet lang=c :
     * double window_scale_factor(const struct Window *window)
     * }
     */
    public static double window_scale_factor(MemorySegment window) {
        var mh$ = window_scale_factor.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_scale_factor", window);
            }
            return (double)mh$.invokeExact(window);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
